<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="T_AVL_Node" Id="{db32b49b-11ed-0512-249d-11105767d55e}">
    <Declaration><![CDATA[TYPE T_AVL_Node : ST_AVL_NODE; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>