<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_AVL_NODE" Id="{daa3723b-a9b9-0a35-2d71-64581c40c172}">
    <Declaration><![CDATA[// Node for AVL Tree.
{attribute 'enable_dynamic_creation'}
TYPE ST_AVL_NODE:
STRUCT
	Data 		: T_Generic; // Stored data.
	Height 		: T_Position; // Height of the node.
	pParent 	: POINTER TO ST_AVL_NODE; 	// Pointer to parent node.
	pLeft 		: POINTER TO ST_AVL_NODE; 	// Pointer to left node.
	pRight 		: POINTER TO ST_AVL_NODE; 	// Pointer to right node.
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>